[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Synaptic Simulations"]
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
